--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,39 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+
+    <div class="content">
+
+        <div class="header">
+            <div class="home">Sophia Miller</div>
+                <ul class="menu">
+                    <li class="menu-element">work</li>
+                    <li class="menu-element">about</li>
+                    <li class="menu-element">contact</li>
+                </ul>
+        </div>
+
+        <div class="about">
+            <div class="image">
+                <img src="./img/picture-of-me.png" alt="picture-of-me">
+            </div>
+            <div class="bio">
+                <div class="text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    </p>
+                    <p>
+                        Blandit massa enim nec dui nunc mattis enim ut. Aliquet sagittis id consectetur purus ut. Facilisis volutpat est velit egestas dui id ornare arcu. Eros donec ac odio tempor orci dapibus.
+                    </p>
+                    <p>
+                        Consequat semper viverra nam libero justo. Tincidunt eget nullam non nisi est sit amet facilisis magna. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt.
+                    </p>
+                    <p>
+                        Consequat semper viverra nam libero justo. Tincidunt eget nullam non nisi est sit amet facilisis magna.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
