--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
     <div class="content">
 
         <div class="header">
-            <div class="home">Sophia Miller</div>
-                <ul class="menu">
-                    <li class="menu-element">work</li>
-                    <li class="menu-element">about</li>
-                    <li class="menu-element">contact</li>
+            <div class="home" class="remove-hyperlink-decoration"><a href="">Sophia Miller</a></div>
+                <ul class="menu" class="remove-hyperlink-decoration">
+                    <li class="menu-element"><a href="">work</a></li>
+                    <li class="menu-element"><a href="">about</a></li>
+                    <li class="menu-element"><a href="">contact</a></li>
                 </ul>
         </div>
 
@@ -38,6 +38,15 @@
                     </p>
                 </div>
             </div>
+        </div>
+
+        <div class="links">
+            <hr>
+            <ul class="social">
+                <li class="social-element">twitter</li>
+                <li class="social-element">instagram</li>
+                <li class="social-element">facebook</li>
+            </ul>
         </div>
     </div>
 </body>
